# dance-booking-backend

./: README.md  pyproject.toml  requirements.md
src/adapters/gateways/providers/: deterministic_date_provider.py
src/adapters/gateways/repositories/: mock_dance_class_repository.py  mock_student_repository.py  mock_studio_repository.py
src/booking/: .env.template  app.py  docker-compose.yaml
src/booking/adapters/controllers/: booking_controller.py  studio_controller.py
src/booking/adapters/dependencies/: get_current_student_id.py  get_session.py
src/booking/hexagon/models/: dance_class.py  exceptions.py  student.py  studio.py
src/booking/hexagon/usecases/: book_class.py  cancel_class.py  create_studio.py  create_studio_room.py  schedule_class.py
src/booking/infrastructure/persistence/: alembic.ini
src/booking/tests/: conftest.py
src/hexagon/gateways/providers/: date_provider.py
src/hexagon/gateways/repositories/: dance_class_repository.py  student_repository.py  studio_repository.py
src/hexagon/models/: dance_class.py  exceptions.py  student.py  studio.py
src/hexagon/usecases/: book_class.py  cancel_class.py  create_studio.py  create_studio_room.py  schedule_class.py
src/hexagon/usecases/tests/: test_book_class.py  test_cancel_class.py  test_create_studio.py  test_create_studio_room.py  test_schedule_class.py
src/order/: requirements.md
src/order/hexagon/models/: event.py  exceptions.py  money.py  order.py  payment.py  product.py
src/order/hexagon/usecases/: confirm_order.py  create_order.py  fail_payment.py  (+2 more)
src/shared_kernel/: utils.py
(+49 files in other folders)
